--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="create_list_label">Create List</string>
     <string name="create_new_list">Create New List</string>
     <string name="createNewList">Create New List</string>
+    <string name="createAccount">No account yet? Create one</string>
+    <string name="login">Login</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
