--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="Retype_Password">Retype Password</string>
     <string name='return_to_login'>Login</string>
     <string name='on_success_user_create'>User Created Successfully! Return to Login Screen.</string>
+    <string name='show_all_users'>Show Users</string>
+    <string name='display_users_to_login'>Back To Login</string>
+    <string name="to_display_users_page">See Users In DB</string>
+    <string name="delete_all_users">Delete All Users</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
