--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,13 @@
     <string name='display_users_to_login'>Back To Login</string>
     <string name="to_display_users_page">See Users In DB</string>
     <string name="delete_all_users">Delete All Users</string>
+    <string name="product_search_text">Search</string>
+    <string name="product_search_icon">Search Icon</string>
+    <string name="dev_home_page_header">Developer Home Page</string>
+    <string name="dev_create_user_btn_txt">Create Fake Users</string>
+    <string name="dev_create_product_btn_txt">Create Grocery Item Objects</string>
+    <string name="dev_view_user_lists">View Lists By User</string>
+    <string name="dev_page_to_home_btn">Dev Page to Home Button</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
