--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="create_grocery_item_btn">Submit</string>
     <string name="view_grocery_items">View Grocery Items</string>
     <string name="delete_selected_items">Delete Items</string>
+    <string name="car_MPG">Car MPG</string>
+    <string name="profile_btn">Profile</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
